reverse previous changes

--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "name": "pumpy-pill",
   "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "build": "echo Static site - no build step needed"
-  }
+  "private": true
 }
