--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "pumpy-pill",
   "version": "1.0.0",
-  "private": true
+  "private": true,
+  "scripts": {
+    "dev": "http-server -p 5173 -c-1 .",
+    "verify": "node 1.7/verification.js"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1"
+  }
 }
